--- a/public/styles.css
+++ b/public/styles.css
@@ -3,3 +3,21 @@
     border-left: 5px solid rgb(244,67,54);
     padding-left: 10px;
 }
+
+i{
+    cursor: pointer;
+}
+
+.horizontal_line {
+    background-color: yellow;
+    width: 90%;
+    height: 5px;
+    border-top: 5px dotted black;
+    line-height: 80%;
+}
+
+.line {
+    border-bottom: 5px solid black;
+    margin-top: 5px;
+    width: 90%;
+}
